03_code2/grade.txt
Grading at Sat Jan 12 09:48:27 UTC 2019
Checking code2.c for legal syntax
temp.c: In function ‘printTriangle’:
temp.c:17:8: error: expected ‘;’ before ‘starCount’
        starCount++;
        ^
temp.c:23:3: error: expected ‘;’ before ‘}’ token
   }
   ^
temp.c:8:7: error: unused variable ‘j’ [-Werror=unused-variable]
   int j;
       ^
temp.c:7:7: error: unused variable ‘i’ [-Werror=unused-variable]
   int i;
       ^
cc1: all warnings being treated as errors
The code did not have legal syntax!

Overall Grade: F
